deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  # The following IngressClassName comes from the IngressClass 
  # defined in the nginx-ingress-controller project.
  ingressClassName: nginx
  rules:
  - host: argocd.teasdale.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
